@@ -4239,6 +4239,14 @@ public:
         else
             cpm_compat_mode = CPM_COMPAT_OFF;
 
+        /* If memsize < 16KB then the only way DOS can work properly is to allocate in the UMB private area */
+        if (MEM_TotalPages() < 4) {
+            if (!private_always_from_umb) {
+                private_always_from_umb = true;
+                LOG(LOG_MISC,LOG_DEBUG)("Memory size < 16KB, allocating all DOS kernel structures in the private upper memory area");
+            }
+        }
+
         /* FIXME: Boot up an MS-DOS system and look at what INT 21h on Microsoft's MS-DOS returns
          *        for SDA size and location, then use that here.
          *
